"AB#149 With GitHub Copilot: Java 17 Upgrade - Update Java language features"