@@ -1,6 +1,9 @@
 package com.springboot.controller;
 
-import org.apache.commons.lang3.StringUtils;
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestHeader;
@@ -9,17 +12,25 @@ import org.springframework.web.bind.annotation.RestController;
 
 import com.springboot.exception.InvalidFieldException;
 import com.springboot.model.Student;
+import com.springboot.service.StudentService;
 
 @RestController
 @RequestMapping("/student")
 public class StudentController {
+	@Autowired
+	StudentService studentService;
 
 	@PostMapping
-	public String saveStudentInformation(@RequestHeader("student-auth-key") String authorization,
-			@RequestBody Student student) {
-		if (StringUtils.isBlank(student.getLastName())) {
-			throw new InvalidFieldException("Last Name is a required field");
-		}
-		return String.format("Authorization %s is valid, and Data is saved", authorization);
-	}
+    public String saveStudentInformation(@RequestHeader("student-auth-key") String authorization,
+                                         @RequestBody Student student) {
+        if (student.lastName() == null || student.lastName().isBlank()) {
+            throw new InvalidFieldException("Last Name is a required field");
+        }
+        return String.format("Authorization %s is valid, and Data is saved", authorization);
+    }
+
+	@GetMapping
+	  public List<Student> fetchAllStudentInformation() {
+        return studentService.getAllStudents();
+    }
 }
